day3/service-nodeport.yaml
cat <<EOF > service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-nodeport
spec:
  type: NodePort
  selector:
    app: my-app
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30007
EOF

kubectl apply -f service-nodeport.yaml
